<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.sebastian.componentesui_lab03.ScrollViewHorizontalActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scrollview_horizontal_example"
        android:paddingBottom="15dp"/>


    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_button_1"
                android:background="@color/primary_dark"
                android:layout_margin="10dp"
                android:padding="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_button_2"
                android:background="@color/primary_light"
                android:layout_margin="10dp"
                android:padding="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_button_3"
                android:background="@color/primary_dark"
                android:layout_margin="10dp"
                android:padding="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_button_4"
                android:background="@color/primary_light"
                android:layout_margin="10dp"
                android:padding="5dp"/>
        </LinearLayout>

    </HorizontalScrollView>


    <HorizontalScrollView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primary_light">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Android Horizontal ScrollView Example Android Horizontal ScrollView Example\nAndroid Horizontal ScrollView ExampleAndroid Horizontal ScrollView Example\nAndroid Horizontal ScrollView ExampleAndroid Horizontal ScrollView Example\nAndroid Horizontal ScrollView ExampleAndroid Horizontal ScrollView Example" />
        </LinearLayout>

    </HorizontalScrollView>


</LinearLayout>
